# crypto_tracker

./: alembic.ini  crypto-tracker.html
alembic/: env.py
backend/: .env.example  .gitignore  auth.py  database.db  db.py  docker-compose.yaml  main.py  pyproject.toml
backend/app/: app.py
backend/routes/: transactions.py
frontend/: components.json  crypto-tracker.html  crypto_tracker.css  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/api/: transactions.js
frontend/src/components/: Dashboard.svelte  Login.svelte  Register.svelte
