[project]
name = "CostWatch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi-limiter>=0.1.6",
    "fastapi-users-db-sqlalchemy>=7.0.0",
    "fastapi[standard]>=0.121.1",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "pwdlib>=0.2.1",
    "pyjwt>=2.10.1",
    "pytest>=8.4.2",
    "python-jose>=3.5.0",
    "redis>=4.5",
    "requests>=2.32.5",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.38.0",
]
